--- a/experience.html
+++ b/experience.html
@@ -38,15 +38,59 @@
 	<!-- Title -->
 	<h1 class="pageTitle"> Work Experience </h1>
 	
+	<!-- Floating Arrow on Page -->
+	<p id="iter" style="display: none;"> 0 </p>
+	<button id="floatingButton" type="button" onclick="nextProject()"> &#8595; </button>
+	
 	<!-- Niagara Systems Engineering Experience Section -->
-	<h2 class="sectionTitle"> Systems Engineering Intern: Niagara Bottling </h2>
+	<h2 id="0" class="sectionTitle"> Systems Engineering Intern: Niagara Bottling </h2>
 	<h3 class="dateLabel"> May 2020 - Present </h3>
-	<p>
-		[ Add Content ]
-	</p>
+	<div class="grid-container">
+		<img src="NiagaraInternship_2020_Images/ignition-scada-system_1.png" alt="Ignition SCADA System" style="width:100%;height:auto;">
+		<p>
+			Currently, I am a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
+			is to utilize the Ignition Supervisor Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
+			plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
+			the company.
+			<br><br>
+			During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include:
+			<br><br>
+			<strong> Gateway Automation User Interface (UI) </strong>: <br>
+			In order to setup the Ignition Gateways within the company members of the Systems Engineering department previously had 2 options; they
+			would either set up the Gateways from scratch or they would use a backup from another plant server and modify the file as needed. Using 
+			either method takes large amounts of time to complete that could be spent on tasks that would add more value to the company while also 
+			creating an inconsistent setup from Gateway to Gateway. This project consisted of creating a process to standardize the Gateway setup 
+			while automating tedious portions of the project that do not need human input.
+			<br><br>
+			<strong> User Management User Interface (UI) </strong>: <br>
+			In order to give members from other departments access to the utility applications created within our department a Digitalization Systems 
+			Engineering team member must manually add them to the Ignition system. This process both takes time for the Systems Engineering team member
+			to complete while also delaying outside team members from accessing projects when necessary. By creating a responsive User Management UI that
+			could be sent to team managers, our team was able to offload the task of managing access to the appropriate teams, which reduced the amount of
+			wait time for project access as well as the redundancy that comes with adding users through the Systems Engineering department. Since this 
+			project deals with managing user access I implemented a multi-tier access control level system to ensure users have the appropriate amount of 
+			privileges when using the UI.
+		</p>
+	</div>
+	
+	<br><hr><br> <!-- Line Break -->
+	
+	<div style="margin-bottom: 10px;" id="divAltColor" class="grid-container">
+		<p>
+			Outside of my projects I have had the opportunity to learn and apply continuous improvement strategies during both years of my internship with 
+			Niagara.
+			<br><br>
+			My previous year as an intern at Niagara I was able to acquire my Lean Six Sigma Yellow Belt by completing the training courses provided by the 
+			company. Using the knowledge I acquired from this training, I kept streamlining and optimization in mind when designing solutions for my projects.
+			The Gateway Automation and User Management UI have both been creating to improve on the process of working with Ignition within Niagara by saving 
+			time that would go into tedious tasks. In particular, letting team managers control the access level of their employees within Ignition will 
+			significantly improve the workflow of Ignition-reliant teams within the company.
+		</p>
+		<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="Lean Six Sigma Yellow Belt" style="width:100%;height:auto;">
+	</div>
 	
 	<!-- Niagara IT Experience Section -->
-	<h2 class="sectionTitle"> Warehouse Management Systems Intern: Niagara Bottling </h2>
+	<h2 id="1" class="sectionTitle"> Warehouse Management Systems Intern: Niagara Bottling </h2>
 	<h3 class="dateLabel"> June 2019 - August 2019 </h3>
 	
 	<p>
@@ -64,7 +108,7 @@
 		be sent a JSON payload using the REST API that will be used by the company to account for exiting truck drivers.
 	</p>
 	
-	<div class="grid-container">
+	<div id="divAltColor" class="grid-container">
 		<img src="NiagaraInternship_2019_Images/RaspberryPi.jpg" alt="Raspberry Pi" style="width:100%;height:auto;">
 		<p>
 			To keep costs low for our proof of concept, I elected to use a generic USB web-camera present within the company to scan the QR code and a
@@ -90,7 +134,7 @@
 		</p>
 	</div>
 	
-	<p style="margin-top: -30px;">	
+	<p>	
 		When creating the interface a lot of design constraints had to be accounted for. Since the project would be used on a screen with unknown dimensions it was important
 		to create a responsive user interface that scales and adjusts to varying screens. GTK+-3.0 provides support for responsive design, and as a result the interface was configured
 		to scale appropriately whether it was on a large monitor or a 7 inch Windows tablet. Another important consideration was making sure the interface is intuitve and easy to use 
@@ -99,18 +143,38 @@
 		dynamically. Images of the interface are included below:
 	</p>
 	
-	<div class="grid-container">
+	<div id="divAltColor" class="grid-container">
 		<img src="NiagaraInternship_2019_Images/SelfCheckout_Homepage.png" alt="Homepage" style="width:100%;height:auto;">
 		<img src="NiagaraInternship_2019_Images/SelfCheckout_AdminPage.png" alt="Administrator Page" style="width:100%;height:auto;">
 	</div>
 	
-	<br><hr><br> <!-- Line Break -->
+	<br><br><hr><br> <!-- Line Break -->
 	
 	<p>
 		In addition to this project, I worked with my team to update Integ JNIOR (Java Network Input Output Resource) automation controllers to send a signal when a new pallet of water
 		should be created. The system would communicate using the Modbus TCP/IP protocol to send information from the controller to a specified address. Updating the JNIORS in-house
 		eliminated the time delay of requesting an update from the company while also reducing the cost of updating the software using an outside resource. 
 	</p>
+	
+	<!-- Next Project Arrow Script -->
+	<script>
+		function nextProject(){
+			var iterVal = document.getElementById('iter').innerHTML;
+
+			// First element sets the arrow character to point downwards
+			if(iterVal == 0){ 
+				document.getElementById('0').scrollIntoView({behavior: 'smooth', block: 'start', inline: 'nearest'}); 
+				document.getElementById('floatingButton').innerHTML = "&#8595";
+			}
+			// Last element sets the arrow character to point upwards
+			if(iterVal == 1){ 
+				document.getElementById('1').scrollIntoView({behavior: 'smooth', block: 'start', inline: 'nearest'});
+				document.getElementById('floatingButton').innerHTML = "&#8593";
+			}
+			
+			document.getElementById('iter').innerHTML = (+iterVal + +1) % 2;
+		}
+	</script>
 	
 </body>
 
