Added new resume

--- a/experience.html
+++ b/experience.html
@@ -45,7 +45,7 @@
 		<img src="NiagaraInternship_2020_Images/ignition-scada-system_1.png" alt="Ignition SCADA System" style="width:100%;height:auto;">
 		<p>
 			Currently, I am a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
-			is to utilize the Ignition Supervisor Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
+			is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
 			plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
 			the company.
 			<br><br>
