Added shadows to elements throughout website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="navbar.css">
 	
 	<!-- Icon Library Sheet -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<!-- Google "Arsenal" and "Quicksand" Font -->
 	<link href='https://fonts.googleapis.com/css?family=Arsenal' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
@@ -25,7 +25,7 @@
 			<i class="fa fa-bars"></i>
 		</label>
 		
-		<a style="border-bottom: none;" href="index.html"><label class="logo"><img src="Logo.png" alt="ONaffaa" style="width:80px;height:80px;"></label></a>
+		<a style="border-bottom: none;" href="index.html"><label class="logo"><img src="Logo.png" alt="ONaffaa" style="width:80px;height:80px;box-shadow:none"></label></a>
 		
 		<ul>
 			<li><a href="index.html"> Home </a></li>
@@ -40,11 +40,11 @@
 	<div class="grid-container" id="banner">
 		<p id="bannerTitle"> Omar Naffaa </p>
 		<p id="bannerContact">
-			<a href="mailto:omarnaffaa.on@gmail.com" class="gridBtnItem" target="blank"><i class="fa fa-envelope"> &nbsp; Email </i></a>
+			<a href="mailto:omarnaffaa.on@gmail.com" class="gridBtnItem" target="blank"><i class="far fa-envelope"> &nbsp; Email </i></a>
 			<br><br>
-			<a href="https://github.com/OmarNaffaa" class="gridBtnItem"><i class="fa fa-github-square"> &nbsp; Full Portfolio </i></a>
+			<a href="https://github.com/OmarNaffaa" class="gridBtnItem"><i class="fab fa-github-square"> &nbsp; Full Portfolio </i></a>
 			<br><br>
-			<a href="https://www.linkedin.com/in/omnaffaa/" class="gridBtnItem"><i class="fa fa-linkedin-square"> &nbsp; LinkedIn </i></a>
+			<a href="https://www.linkedin.com/in/omnaffaa/" class="gridBtnItem"><i class="fab fa-linkedin"> &nbsp; LinkedIn </i></a>
 		</p>
 	</div>
 	
