--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 			<i class="fa fa-bars"></i>
 		</label>
 		
-		<a style="border-bottom: none;" href="index.html"><label class="logo"><img src="Logo.png" alt="ONaffaa" style="width:80px;height:80px;"></label></a>
+		<a style="border-bottom: none;" href="index.html"><label class="logo"><img src="Logo.png" alt="ONaffaa" style="width:80px;height:80px;box-shadow:none"></label></a>
 		
 		<ul>
 			<li><a href="index.html"> Home </a></li>
