--- a/experience.html
+++ b/experience.html
@@ -41,37 +41,37 @@
 	<!-- Niagara Systems Engineering Experience Section -->
 	<h2 class="sectionTitle"> Systems Engineering Intern: Niagara Bottling </h2>
 	<h3 class="dateLabel"> May 2020 - Present </h3>
-	<div class="grid-container">
-		<img src="NiagaraInternship_2020_Images/ignition-scada-system_1.png" alt="Ignition SCADA System" style="width:100%;height:auto;">
-		<p>
-			Currently, I am a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
-			is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
-			plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
-			the company.
-			<br><br>
-			During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include:
-			<br><br>
-			<strong> Gateway Automation User Interface (UI) </strong>: <br>
-			In order to setup the Ignition Gateways within the company members of the Systems Engineering department previously had 2 options; they
-			would either set up the Gateways from scratch or they would use a backup from another plant server and modify the file as needed. Using 
-			either method takes large amounts of time to complete that could be spent on tasks that would add more value to the company while also 
-			creating an inconsistent setup from Gateway to Gateway. This project consisted of creating a process to standardize the Gateway setup 
-			while automating tedious portions of the project that do not need human input.
-			<br><br>
-			<strong> User Management User Interface (UI) </strong>: <br>
-			In order to give members from other departments access to the utility applications created within our department a Digitalization Systems 
-			Engineering team member must manually add them to the Ignition system. This process both takes time for the Systems Engineering team member
-			to complete while also delaying outside team members from accessing projects when necessary. By creating a responsive User Management UI that
-			could be sent to team managers, our team was able to offload the task of managing access to the appropriate teams, which reduced the amount of
-			wait time for project access as well as the redundancy that comes with adding users through the Systems Engineering department. Since this 
-			project deals with managing user access I implemented a multi-tier access control level system to ensure users have the appropriate amount of 
-			privileges when using the UI.
-		</p>
-	</div>
+	<p>
+		Currently, I am a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
+		is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
+		plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
+		the company.
+	</p>
+	
+	<p>
+		During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include:
+		<br><br>
+		<strong> Gateway Automation User Interface (UI) </strong>: <br>
+		In order to setup the Ignition Gateways within the company members of the Systems Engineering department previously had 2 options; they
+		would either set up the Gateways from scratch or they would use a backup from another plant server and modify the file as needed. Using 
+		either method takes large amounts of time to complete that could be spent on tasks that would add more value to the company while also 
+		creating an inconsistent setup from Gateway to Gateway. This project consisted of creating a process to standardize the Gateway setup 
+		while automating tedious portions of the project that do not need human input.
+		<br><br>
+		<strong> User Management User Interface (UI) </strong>: <br>
+		In order to give members from other departments access to the utility applications created within our department a Digitalization Systems 
+		Engineering team member must manually add them to the Ignition system. This process both takes time for the Systems Engineering team member
+		to complete while also delaying outside team members from accessing projects when necessary. By creating a responsive User Management UI that
+		could be sent to team managers, our team was able to offload the task of managing access to the appropriate teams, which reduced the amount of
+		wait time for project access as well as the redundancy that comes with adding users through the Systems Engineering department. Since this 
+		project deals with managing user access I implemented a multi-tier access control level system to ensure users have the appropriate amount of 
+		privileges when using the UI.
+	</p>
+	
+	<span id="project1">
 	
 	<br><hr><br> <!-- Line Break -->
 	
-	<div style="margin-bottom: 10px;" id="divAltColor" class="grid-container">
 		<p>
 			Outside of my projects I have had the opportunity to learn and apply continuous improvement strategies during both years of my internship with 
 			Niagara.
@@ -82,8 +82,11 @@
 			time that would go into tedious tasks. In particular, letting team managers control the access level of their employees within Ignition will 
 			significantly improve the workflow of Ignition-reliant teams within the company.
 		</p>
-		<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="Lean Six Sigma Yellow Belt" style="width:100%;height:auto;">
-	</div>
+		<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="Lean Six Sigma Yellow Belt" style="width:91%;margin-left:4%;margin-right:5%;margin-bottom:10px;height:auto;">
+	
+	</span>
+	<label style="font-size:24px;margin-left:4%" onclick="expandProject1()" id="expandProj1">(Read more)</label>
+	<br><br>
 	
 	<!-- Niagara IT Experience Section -->
 	<h2 class="sectionTitle"> Warehouse Management Systems Intern: Niagara Bottling </h2>
@@ -104,32 +107,6 @@
 		be sent a JSON payload using the REST API that will be used by the company to account for exiting truck drivers.
 	</p>
 	
-	<div id="divAltColor" class="grid-container">
-		<img src="NiagaraInternship_2019_Images/RaspberryPi.jpg" alt="Raspberry Pi" style="width:100%;height:auto;">
-		<p>
-			To keep costs low for our proof of concept, I elected to use a generic USB web-camera present within the company to scan the QR code and a
-			<strong>Raspberry Pi</strong> as the central embedded system for the system, which cost less than $50 total. To ensure no unnecessary fees were incurred for
-			this proof of concept, all the software features that were not programmed in-house were implemented using open source external libraries, which
-			allowed us to develop the software for the system without having to pay extra fees.
-			<br><br>
-			<u>The software libraries used for this project include:</u>
-			<br><br>
-			<strong> OpenCV (C++) </strong>: <br>
-			Computer Vision was utilized to allow an ordinary webcam to read and parse the QR code image that is captured by the program. Using this library
-			along with generic camera hardware reduced the cost that comes with specialty equipment while allowing the application to utilize the internal
-			webcam present in the ruggedized Windows tablet that would be used as the end product.
-			<br><br>
-			<strong> GTK+-3.0 (C/C++) </strong>: <br>
-			This library was used to create a UI for the proejct using C/C++, which was needed since the computer vision code was written in C++. This library
-			allowed the entire codebase to be written in C++, which greatly improved the performance of the system.
-			<br><br>
-			<strong> JSON-C / cURL (C++) </strong>: <br>
-			These libraries were necessary to allow the application to communicate with the company server using REST API. Since C++ has no native protocols 
-			to send JSON messages these libraries were required to implement a system to send information from the application to an external destination
-			over the network.
-		</p>
-	</div>
-	
 	<p>	
 		When creating the interface a lot of design constraints had to be accounted for. Since the project would be used on a screen with unknown dimensions it was important
 		to create a responsive user interface that scales and adjusts to varying screens. GTK+-3.0 provides support for responsive design, and as a result the interface was configured
@@ -143,6 +120,31 @@
 		<img src="NiagaraInternship_2019_Images/SelfCheckout_Homepage.png" alt="Homepage" style="width:100%;height:auto;">
 		<img src="NiagaraInternship_2019_Images/SelfCheckout_AdminPage.png" alt="Administrator Page" style="width:100%;height:auto;">
 	</div>
+
+	<span id="project2">
+
+	<p>
+		To keep costs low for our proof of concept, I elected to use a generic USB web-camera present within the company to scan the QR code and a
+		<strong>Raspberry Pi</strong> as the central embedded system for the system, which cost less than $50 total. To ensure no unnecessary fees were incurred for
+		this proof of concept, all the software features that were not programmed in-house were implemented using open source external libraries, which
+		allowed us to develop the software for the system without having to pay extra fees.
+		<br><br>
+		<u>The software libraries used for this project include:</u>
+		<br><br>
+		<strong> OpenCV (C++) </strong>: <br>
+		Computer Vision was utilized to allow an ordinary webcam to read and parse the QR code image that is captured by the program. Using this library
+		along with generic camera hardware reduced the cost that comes with specialty equipment while allowing the application to utilize the internal
+		webcam present in the ruggedized Windows tablet that would be used as the end product.
+		<br><br>
+		<strong> GTK+-3.0 (C/C++) </strong>: <br>
+		This library was used to create a UI for the proejct using C/C++, which was needed since the computer vision code was written in C++. This library
+		allowed the entire codebase to be written in C++, which greatly improved the performance of the system.
+		<br><br>
+		<strong> JSON-C / cURL (C++) </strong>: <br>
+		These libraries were necessary to allow the application to communicate with the company server using REST API. Since C++ has no native protocols 
+		to send JSON messages these libraries were required to implement a system to send information from the application to an external destination
+		over the network.
+	</p>
 	
 	<br><br><hr><br> <!-- Line Break -->
 	
@@ -151,6 +153,43 @@
 		should be created. The system would communicate using the Modbus TCP/IP protocol to send information from the controller to a specified address. Updating the JNIORS in-house
 		eliminated the time delay of requesting an update from the company while also reducing the cost of updating the software using an outside resource. 
 	</p>
+	
+	</span>
+	<label style="font-size:24px;margin-left:4%" onclick="expandProject2()" id="expandProj2">(Read more)</label>
+	<br><br>
+	
+	<!-- Javascript Function --->
+	<script>
+		function expandProject1() 
+		{
+			var projOneText = document.getElementById("project1");
+			var projOneExpandText = document.getElementById("expandProj1");
+
+			if (projOneExpandText.innerHTML === "(Read less)") {
+				projOneExpandText.innerHTML = "(Read more)"; 
+				projOneText.style.display = "none";
+			} 
+			else {
+				projOneExpandText.innerHTML = "(Read less)"; 
+				projOneText.style.display = "inline";
+			}
+		}
+		
+		function expandProject2() 
+		{
+			var projTwoText = document.getElementById("project2");
+			var projTwoExpandText = document.getElementById("expandProj2");
+			
+			if (projTwoExpandText.innerHTML === "(Read less)") {
+				projTwoExpandText.innerHTML = "(Read more)"; 
+				projTwoText.style.display = "none";
+			} 
+			else {
+				projTwoExpandText.innerHTML = "(Read less)"; 
+				projTwoText.style.display = "inline";
+			}
+		}
+	</script>
 	
 </body>
 
