Rearranged experience section pictures

--- a/experience.html
+++ b/experience.html
@@ -41,13 +41,14 @@
 	<!-- Niagara Systems Engineering Experience Section -->
 	<h2 class="sectionTitle"> Systems Engineering Intern: Niagara Bottling </h2>
 	<h3 class="dateLabel"> May 2020 - Present </h3>
+	
 	<p>
 		Currently, I am a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
 		is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
 		plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
 		the company.
 	</p>
-	
+
 	<p>
 		During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include:
 		<br><br>
@@ -67,11 +68,13 @@
 		project deals with managing user access I implemented a multi-tier access control level system to ensure users have the appropriate amount of 
 		privileges when using the UI.
 	</p>
-	
+
 	<span id="project1">
 	
 	<br><hr><br> <!-- Line Break -->
-	
+
+	<div id="divAltColor" class="grid-container">
+		<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="[ Missing Image ]">
 		<p>
 			Outside of my projects I have had the opportunity to learn and apply continuous improvement strategies during both years of my internship with 
 			Niagara.
@@ -82,7 +85,7 @@
 			time that would go into tedious tasks. In particular, letting team managers control the access level of their employees within Ignition will 
 			significantly improve the workflow of Ignition-reliant teams within the company.
 		</p>
-		<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="Lean Six Sigma Yellow Belt" style="width:91%;margin-left:4%;margin-right:5%;margin-bottom:10px;height:auto;">
+	</div>
 	
 	</span>
 	<label style="font-size:24px;margin-left:4%" onclick="expandProject1()" id="expandProj1">(Read more)</label>
