--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
 		and technologies simulated.
 	</p>
 	
-	<img src="5G_SHN_Pictures/SystemArchitecture.png" alt="System Architecture" style="width:70%;margin-left:15%;margin-right:15%;">
+	<img class="projectPictures" src="5G_SHN_Pictures/SystemArchitecture.png" alt="System Architecture">
 	<p>
 		During runtime the project goes through those 3 different stages: the initalization phase, simulation phase, and finally the output phase.
 		The programmed simulator takes in a pre-generatred array of Signal to Noise Ratio values from MATLAB and uses it within the C++ simulator.
@@ -72,7 +72,7 @@
 		The hexagons represent a sample network that was instantiated, and the numbers placed at the center of the hexagons represent the order 
 		in which the hexagons were created by the user.
 	</p>
-	<img src="5G_SHN_Pictures/5G_SHN_3.png" alt="tower structure" style="width:50%;margin-left:25%;margin-right:25%;height:auto;">
+	<img class="projectPictures" src="5G_SHN_Pictures/5G_SHN_3.png" alt="tower structure">
 	<p>
 		<br><br>
 		<u> The following conditions are depicted in the image above: </u>
@@ -98,7 +98,7 @@
 	
 	<br><hr><br> <!-- Line Break -->
 
-	<img src="5G_SHN_Pictures/5G_SHN_2.png" alt="parameter entry" style="width:80%;margin-left:10%;margin-right:10%;height:auto;">
+	<img class="projectPictures" src="5G_SHN_Pictures/5G_SHN_2.png" alt="parameter entry">
 	<p>
 		After creating the cellular tower network the user will be navigated to a page that lets them enter network parameters that will be used to set 
 		up the simulation. The required parameters are split into 3 categories: <u> Network Parameters, Simulation Parameters, and Self-Healing
@@ -135,7 +135,7 @@
 		For this project I served as the sole developer of the mobile application. The application itself was developed entirely in Java using
 		Android Studio and standard material design principles.
 	</p>
-	<img src="DROWT_Pictures/AllAppPages.png" alt="Android Studio Logo" style="width:91%;margin-left:4%;margin-right:5%;height:auto;">
+	<img class="projectPictures" src="DROWT_Pictures/AllAppPages.png" alt="Android Studio Logo">
 	
 	<span id="project2">
 	
@@ -160,7 +160,7 @@
 		appropriate information to add the system.
 	</p>
 	
-	<img src="DROWT_Pictures/ThingSpeakImages.png" alt="ThingSpeakImages" style="width:91%;margin-left:4%;margin-right:5%;height:auto;">
+	<img class="projectPictures" src="DROWT_Pictures/ThingSpeakImages.png" alt="ThingSpeakImages">
 	<p>
 		Data set to the application is from our mock system (and vice versa) are sent using the ThingSpeak REST API service, which also logs data points sent
 		by the mock system.
@@ -214,7 +214,7 @@
 		7-segment display on the FPGA.
 	</p>
 	
-	<img src="FrequencyPeriodMeter/BlockDiagram.png" alt="Block Diagram" style="width:91%;margin-left:4%;margin-right:5%;height:auto;">
+	<img class="projectPictures" src="FrequencyPeriodMeter/BlockDiagram.png" alt="Block Diagram">
 	
 	<span id="project3">
 	
@@ -245,7 +245,7 @@
 		analysis. To view the full report for this project 
 		<strong><a href="web/viewer.html?file=FrequencyPeriodMeterReport.pdf"> click here. </a></strong>
 	</p>
-	<img src="FrequencyPeriodMeter/output.png" alt="Sample Output" style="width:91%;margin-left:4%;margin-right:5%;height:auto;">
+	<img class="projectPictures" src="FrequencyPeriodMeter/output.png" alt="Sample Output">
 	
 	</span>
 	<br>
@@ -264,7 +264,7 @@
 		pool. This is done by calculating the nearest direct path from the current destination of the repair man to a next destination.
 	</p>
 	
-	<img src="LocationFinder/LocationFinderMainPage.png" alt="Location Finder Main Page" style="width:91%;height:auto;margin-left:4%;margin-right:5%">
+	<img class="projectPictures" src="LocationFinder/LocationFinderMainPage.png" alt="Location Finder Main Page">
 	
 	<p>
 		In the default configuration shown belowthe repair man would have to traverse the pools in the order "B, C, G, A, F, E,  
@@ -278,7 +278,7 @@
 		The full source code for this project can be viewed <strong><a href="https://github.com/OmarNaffaa/LocationFinder"> here </a></strong>
 	</p>
 	
-	<!-- Javascript Function --->
+	<!-- Javascript Functions --->
 	<script>
 		function expandProject1() 
 		{
